--- a/css/style.css
+++ b/css/style.css
@@ -8,15 +8,16 @@ body {
     justify-content: center;
     height: 100vh;
 }
-.game {
+#board {
     width: 600px;
     height: 600px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 6px;
     /* margin: auto; */
+    /* filter: blur(5px); */
 }
-.game div {
+#board div {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -27,7 +28,40 @@ body {
     font-size: 100px;
     transition-duration: .3s;
 }
-.game div:hover {
+#board div:hover {
     background-color: black;
     color: white;
 }
+#again {
+    position: absolute;
+    left: 50%;
+    top: 45%;
+    transform: translate(-50%, -50%);
+    width: 400px;
+    height: 200px;
+    background-color: white;
+    border-radius: 8px;
+    display: none;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+    z-index: 5;
+}
+#again button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 8px;
+    transition-duration: 0.4s;
+  }
+  
+  #again button:hover {
+    background-color: #45a049; /* Darker Green */
+  }
