--- a/css/style.css
+++ b/css/style.css
@@ -1,80 +1,80 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 #board {
-    width: 600px;
-    height: 600px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 6px;
-    /* margin: auto; */
-    /* filter: blur(5px); */
+  width: 600px;
+  height: 600px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 6px;
+  /* margin: auto; */
+  /* filter: blur(5px); */
 }
 #board div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px;
-    height: 200px;
-    background-color: #ddd;
-    cursor: pointer;
-    font-size: 100px;
-    transition-duration: .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 200px;
+  height: 200px;
+  background-color: #ddd;
+  cursor: pointer;
+  font-size: 100px;
+  transition-duration: 0.3s;
 }
 #board div:hover {
-    background-color: black;
-    color: white;
+  background-color: black;
+  color: white;
 }
-#again {
-    position: absolute;
-    left: 50%;
-    top: 45%;
-    transform: translate(-50%, -50%);
-    width: 400px;
-    height: 200px;
-    background-color: white;
-    border-radius: 8px;
-    display: none;
-    align-items: center;
-    justify-content: space-evenly;
-    flex-direction: column;
-    z-index: 5;
+.again {
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 200px;
+  background-color: white;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  z-index: 5;
 }
-#again button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-    border-radius: 8px;
-    transition-duration: 0.4s;
-  }
-  
-  #again button:hover {
-    background-color: #45a049; /* Darker Green */
-  }
-#again {
-    animation: fadeIn 2s ease forwards; /* Change the duration and timing function as needed */
-    opacity: 0; /* Start with the element invisible */
+.again button {
+  background-color: #4caf50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 8px;
+  transition-duration: 0.4s;
+}
+
+.again button:hover {
+  background-color: #45a049; /* Darker Green */
+}
+.again {
+  animation: fadeIn 2s ease forwards; /* Change the duration and timing function as needed */
+  opacity: 0; /* Start with the element invisible */
 }
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0; /* Start with the element invisible */
-    }
-    100% {
-        opacity: 1; /* Fully visible */
-    }
+  0% {
+    opacity: 0; /* Start with the element invisible */
+  }
+  100% {
+    opacity: 1; /* Fully visible */
+  }
 }
